fix layout overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -137,3 +137,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+* {
+  box-sizing: border-box;
+}
