--- a/src/styles/_includes/sidebar.scss
+++ b/src/styles/_includes/sidebar.scss
@@ -10,31 +10,36 @@
   }
 }
 
+:root {
+  --sidebar-width: 300px;
+}
+
 .sidebar {
-  top: 0;
+  top: 20px;
   bottom: 0;
   flex-direction: column;
   width: 100%;
   z-index: 10;
-  padding: 1.5rem;
+  padding: 1rem;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.02);
-  position: absolute;
+  position: sticky;
   background: var(--white);
   display: none;
   flex-shrink: 0;
+  height: 100vh;
 
   @media only screen and (min-width: 700px) {
     position: sticky;
-    width: 22rem;
-    top: 4rem;
-    max-height: 100vh;
+    left: 0;
+    top: var(--header-height, 80px);
+    width: 300px;
+    height: calc(100vh - var(--header-height, 80px));
     display: flex;
   }
 
   #sidebar {
     @media only screen and (min-width: 768px) {
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
       box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.15);
       max-height: initial;
       border-bottom: none;
